.labs/Local-Kubernetes/homelab/projects/openwebui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: openwebui
  labels:
    app: open-webui
spec:
  type: ClusterIP
  selector:
    app: open-webui
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
